<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_margin="@dimen/padding_10"
    android:elevation="@dimen/padding_10"
    android:layout_gravity="center"
    app:cardCornerRadius="@dimen/padding_10"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_height="match_parent">

        <View
            android:id="@+id/border"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimary"/>


        <TextView
            android:layout_marginTop="@dimen/padding_10"
            android:id="@+id/rate_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_tv"
            android:textColor="#fff"
            android:textSize="20sp"
            android:gravity="center"
            android:padding="@dimen/padding_10"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/cav"/>


        <EditText
            android:layout_margin="@dimen/padding_10"
            android:id="@+id/book_name_request"
            android:layout_below="@id/border"
            android:fontFamily="@font/cav"
            android:hint="@string/book_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:layout_margin="@dimen/padding_10"
            android:id="@+id/book_details_request"
            android:layout_below="@id/book_name_request"
            android:fontFamily="@font/cav"
            android:hint="@string/book_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>





        <Button
            android:id="@+id/request_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/book_details_request"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/padding_10"
            android:foreground="?android:attr/selectableItemBackground"
            android:textColor="@color/white"
            android:fontFamily="@font/cav"
            android:background="@color/colorPrimary"
            android:layout_margin="@dimen/padding_10"

            android:text="@string/request_book_btn"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>